--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 MYSQL_ROOT_PASSWORD=
-MYSQL_HOST=db-kinukoniya
-MYSQL_DATABASE=kinukoniya
+MYSQL_HOST=db-tubes-1
+MYSQL_DATABASE=tubeswbd
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_PORT=3306
